R > 3.5 issue #68, and many edits for chapters 1 and 2

--- a/style.css
+++ b/style.css
@@ -30,11 +30,13 @@ pre code {
     padding: 0.5em;
     background-color: #f0b37e;
     border-radius: 5px;
+    text-align: center;
 }
 
 .tip {
     padding: 0.5em;
     background-color: #dbfaf4;
     border-radius: 5px;
+    text-align: center;
 }
 
