--- a/style.css
+++ b/style.css
@@ -24,6 +24,8 @@ pre code {
     padding: 0.5em;
     background-color: #e7f2fa;
     border-radius: 5px;
+    text-align: center;
+
 }
 
 .warning {
