--- a/_slides/style.css
+++ b/_slides/style.css
@@ -7,4 +7,15 @@
   font-size: 1em;
 }
 
+.quote-container blockquote p {
+  display: block;
+  font-size: 8px;
+}
 
+#future-steps {
+  color: blue;
+}
+
+.emphasized {
+  font-size: 1.2em;
+}
